--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: #f189b1;
+  color: #000;
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+/* section */
+.section,
+.container {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 450px;
+  background: #ffffff;
+  border-radius: 0.25rem;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 5px 15px rgb(0 0 0 / 40%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (min-width: 992px) {
+  .section {
+    width: 95vw;
+  }
+}
+.container {
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-column-gap: 0.75rem;
+  column-gap: 0.75 rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+  background: #ffffff;
+}
+
+.person {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-column-gap: 0.75rem;
+  column-gap: 0.75rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+  font-style: ;
+}
+
+div {
+  display: block;
 }
